@startuml
'https://plantuml.com/class-diagram
skinparam groupInheritance 2

skinparam linetype polyline

package Board
{
     class Board {
    }
     abstract class Square {
     }
}
package Cards
{
   abstract class chanceCard{
   }
   class Deck{
   }
}

package Logic{
     class Bank {
     }
     class ActionHandler {
     }
     class GameController {
     }
}
package Interface{
class GUIController{

}

}
package Utilities
{
  class CSVReader{
  }
  class Language{
  }
}
package SimpleClasses{
class Player{
     }
     class Die {
     }

     class DiceCup {
     }


}



GameController -u- GUIController
Bank -u-> ActionHandler
GameController <-u- DiceCup
DiceCup *-- Die
GameController <-u- Player

ActionHandler <-d- Deck
GameController <-u- Board
Board *-d- Square




Deck *-- chanceCard


Board <-d- CSVReader
Board <- ActionHandler
CSVReader -- Language






@enduml